--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,12 @@ h3 {
     color: #2e2f42;
 }
 
-p {
+.p {
     color: #434455;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 a {
@@ -73,8 +77,6 @@ ul {
 
 .solutions-block {
     background-color: #2e2f42;
-    width: 1440px;
-    height: 600px;
 }
 
 h1 {
@@ -88,20 +90,12 @@ h1 {
 }
 
 .order-button {
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
-}
-
-.features p {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
 }
 
 .our-team-section {
