--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ h2 {
     color: #2e2f42;
 }
 
-h3 {
+.h3-text {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -21,7 +21,7 @@ h3 {
     color: #2e2f42;
 }
 
-.p {
+.p-text {
     color: #434455;
     font-weight: 400;
     font-size: 16px;
