--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ ul {
     background-color: #2e2f42;
 }
 
-h1 {
+.h1-text {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 56px;
