--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ ul {
     background-color: #2e2f42;
 }
 
-.h1-text {
+.main-text {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
     font-size: 56px;
@@ -99,12 +99,19 @@ ul {
 }
 
 .order-button {
+    font-family: "Roboto", sans-serif;
     background: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
+}
+
+.order-button:hover, 
+.order-button:focus {
+    background-color: #404BBF;
+    cursor: pointer;
 }
 
 .our-team-section {
