--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@ a {
     border-bottom: 1px solid #e7e9fc;
 }
 
-.nav-container {
-    display: flex;
-}
-
 .container {
     width: 1158px;
     margin: 0 auto;
@@ -30,6 +26,7 @@ a {
 
 .container-nav {
     display: flex;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -78,6 +75,8 @@ a {
 
 .nav a,
 ul {
+    gap: 40px;
+    display: flex;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -91,11 +90,18 @@ ul {
     display: flex;
 }
 
+.address-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 .address-container:not(:last-child) {
     margin-right: 40px;
 }
 
 .tel-mail {
+    display: flex;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
@@ -114,6 +120,7 @@ ul {
 
 .solutions-block {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
 .main-text {
@@ -124,16 +131,25 @@ ul {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
+
+    max-width: 496px;
 }
 
 .order-button {
     font-family: "Roboto", sans-serif;
-    background: #4d5ae5;
+    background-color: #4d5ae5;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.04em;
     color: #fff;
+
+    display: block;
+    max-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .order-button:hover, 
@@ -144,13 +160,32 @@ ul {
 
 /* Features */
 
-.h2-features {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.1;
-    letter-spacing: 0.02em;
-    text-align: center;
-    color: #2e2f42;
+.features {
+    padding: 120px 0;
+}
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+
+}
+
+.features-list {
+    display: flex;
+}
+
+.features-list:not(:last-child) {
+    gap: 24px;
+}
+
+.point {
+    width: calc((100% - 72px) / 4);
 }
 
 .features-text {
@@ -159,6 +194,8 @@ ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
+    margin-bottom: 8px;
 }
 
 .p-text {
@@ -172,6 +209,14 @@ ul {
 
 /* Our team */
 
+.our-team-list {
+    display: flex;
+}
+
+.our-team-list:not(:last-child) {
+    gap: 24px;
+}
+
 .our-team {
     font-weight: 700;
     font-size: 36px;
@@ -180,14 +225,23 @@ ul {
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-transform: capitalize;
+
+    margin-bottom: 72px;
 }
 
 .our-team-people {
     background-color: #ffffff;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.job-name {
+    padding: 32px 0;
 }
 
 .our-team-section {
     background-color: #f4f4fd;
+    padding: 120px 0;
 }
 
 .our-team-name {
@@ -196,6 +250,9 @@ ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .our-team-text {
@@ -203,6 +260,14 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+
+    text-align: center;
+}
+
+/* Our Portfolio */
+
+.portolio {
+    padding: 120px 0 120px 0;
 }
 
 .our-portfolio {
@@ -212,6 +277,34 @@ ul {
     letter-spacing: 0.02em;
     color: #2e2f42;
     text-transform: capitalize;
+
+    margin-bottom: 72px;
+}
+
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.portfolio-list:nth-child(2 * 0 + 3), 
+.portfolio-list:nth-child(2 * 0 + 6) {
+    column-gap: 24px;
+}
+
+.portfolio-list:nth-child(2 * 0 + 4), 
+.portfolio-list:nth-child(2 * 0 + 5), 
+.portfolio-list:nth-child(2 * 0 + 6) {
+    row-gap: 48px;
+}
+
+.portfolio-point {
+    width: calc((100% - 48px) / 3);
+}
+
+.app-name {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
 }
 
 .portfolio-text {
@@ -220,6 +313,8 @@ ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
+    margin-bottom: 8px;
 }
 
 .portfolio-program {
@@ -230,8 +325,11 @@ ul {
     color: #434455;
 }
 
+/* Footer */
+
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .logo-footer {
@@ -243,6 +341,8 @@ ul {
     text-transform: uppercase;
     text-decoration: none;
     color: #4d5ae5;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .logo-footer-span {
@@ -262,4 +362,5 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #f4f4fd;
+    max-width: 264px;
 }
