--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ ul {
     color: #fff;
 
     display: block;
-    max-width: 169px;
+    min-width: 169px;
     height: 56px;
     border: none;
     border-radius: 4px;
@@ -169,23 +169,26 @@ ul {
     width: 1px;
     height: 1px;
     margin: -1px;
-    padding: 0;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
     border: 0;
+    padding: 0;
 
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 
 .features-list {
     display: flex;
+    margin-right: 24px;
 }
 
-.features-list:not(:last-child) {
-    gap: 24px;
+.features-list:last-child {
+    margin-right: 0;
 }
 
 .point {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
 .features-text {
@@ -211,10 +214,11 @@ ul {
 
 .our-team-list {
     display: flex;
+    margin-right: 24px;
 }
 
-.our-team-list:not(:last-child) {
-    gap: 24px;
+.our-team-list:last-child {
+    margin-right: 0;
 }
 
 .our-team {
@@ -231,7 +235,8 @@ ul {
 
 .our-team-people {
     background-color: #ffffff;
-    width: calc((100% - 72px) / 4);
+
+    flex-basis: calc((100% - 3 * 24px) / 4);
     border-radius: 0px 0px 4px 4px;
 }
 
@@ -266,7 +271,7 @@ ul {
 
 /* Our Portfolio */
 
-.portolio {
+.portfolio {
     padding: 120px 0 120px 0;
 }
 
@@ -284,17 +289,12 @@ ul {
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
-}
-
-.portfolio-list:nth-child(2 * 0 + 3), 
-.portfolio-list:nth-child(2 * 0 + 6) {
     column-gap: 24px;
+    row-gap: 48px;
 }
 
-.portfolio-list:nth-child(2 * 0 + 4), 
-.portfolio-list:nth-child(2 * 0 + 5), 
-.portfolio-list:nth-child(2 * 0 + 6) {
-    row-gap: 48px;
+.portfolio-point:nth-last-child(-n + 3) {
+    margin-bottom: 0;
 }
 
 .portfolio-point {
