--- a/css/style.css
+++ b/css/style.css
@@ -188,7 +188,7 @@ ul {
 } 
 
 .point {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4);
 }
 
 .features-text {
@@ -298,7 +298,7 @@ ul {
 }
 
 .portfolio-point {
-    width: calc((100% - 48px) / 3);
+    flex-basis: calc((100% - 2 * 24px) / 3);
 }
 
 .app-name {
