--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,12 @@ ul {
     padding: 188px 0;
 }
 
+.container-solutions {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .main-text {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -188,7 +194,7 @@ ul {
 } 
 
 .point {
-    flex-basis: calc((100% - 3 * 24px) / 4);
+    width: calc((100% - 72px) / 4);
 }
 
 .features-text {
@@ -219,6 +225,11 @@ ul {
 
 .our-team-people:last-child {
     margin-right: 0;
+}
+
+.container-team {
+    display: flex;
+    align-items: center;
 }
 
 .our-team {
