--- a/css/style.css
+++ b/css/style.css
@@ -194,7 +194,7 @@ ul {
 } 
 
 .point {
-    width: calc((100% - 72px) / 4);
+    flex-basis: calc((100% - 72px) / 4); 
 }
 
 .features-text {
@@ -309,7 +309,7 @@ ul {
 }
 
 .portfolio-point {
-    flex-basis: calc((100% - 2 * 24px) / 3);
+    flex-basis: calc((100% - 48px) / 3);
 }
 
 .app-name {
