--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ a {
     color: #2e2f42;
 }
 
+ul, li {
+    margin: 0;
+    padding: 0;
+}
+
 /* Header */
 
 .had-container {
@@ -193,8 +198,8 @@ ul {
     margin-right: 0;
 } 
 
-.features-list .point {
-    flex-basis: calc((100% - 72px) / 4); 
+.point {
+    width: calc((100% - 72px) / 4); 
 }
 
 .features-text {
@@ -302,6 +307,7 @@ ul {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
+    padding: 0;
 }
 
 .portfolio-point:nth-last-child(-n + 3) {
