--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+* {
+    padding: 0px;
+    margin: 0px;
+    border: 0px;
+}
+
 body {
     font-family: "Roboto", sans-serif;
     background-color: #fff;
@@ -31,7 +37,7 @@ ul, li {
 
 .container-nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -144,6 +150,7 @@ ul {
     color: #fff;
 
     max-width: 496px;
+    margin-bottom: 48px;
 }
 
 .order-button {
@@ -307,7 +314,6 @@ ul {
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
-    padding: 0;
 }
 
 .portfolio-point:nth-last-child(-n + 3) {
