--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,9 @@ ul {
     rgba(46, 47, 66, 0.7)), 
     url(/images/hero-image.jpg);
     background-size: cover;
-;
+    max-width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .container-solutions {
@@ -202,7 +204,7 @@ ul {
     border-radius: 4px;
     cursor: pointer;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .order-button:hover, 
@@ -242,6 +244,7 @@ ul {
     border: 1px solid #8e8f99;
     border-radius: 4px;
     background-color: #f4f4fd;
+    margin-bottom: 8px;
 }
 .features-icon {
     width: 64px;
@@ -267,7 +270,6 @@ ul {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin-top: 8px;
     margin-bottom: 8px;
 }
 
@@ -296,6 +298,10 @@ ul {
     align-items: center;
 }
 
+.bottom-point {
+    padding: 32px 0;
+}
+
 .our-team {
     font-weight: 700;
     font-size: 36px;
@@ -321,15 +327,6 @@ ul {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.our-team-people:hover .social-icon-list{
-    background-color: #404bbf;
-}
-
-.job-name {
-    padding-top: 32px;
-    padding-bottom: 8px;
-}
-
 .our-team-section {
     background-color: #f4f4fd;
     padding: 120px 0;
@@ -353,39 +350,39 @@ ul {
     color: #434455;
 
     text-align: center;
-}
-
-.social-media {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    max-width: 264px;
-    padding-bottom: 32px;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-bottom: 8px;
 }
 
 .social-list {
+    display: flex;
+    justify-content: center;
     gap: 24px;
 }
 
-.social-icon-list {
-    width: 40px;
-    height: 40px;
+.social-link {
+    width: 100%;
+    height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+}
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.social-link:hover, 
+.social-link:focus {
+    background-color: #404bbf;
+}
+
+.social-icon-list {
+    width: 40px;
+    height: 40px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
-    width: 16px;
-    height: 16px;
-    fill: #fff;
+    fill: #f4f4fd;
 }
 
 /* Our Portfolio */
@@ -412,12 +409,18 @@ ul {
     row-gap: 48px;
 }
 
+.portfolio-point:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .portfolio-point:nth-last-child(-n + 3) {
     margin-bottom: 0;
 }
 
 .portfolio-point {
     flex-basis: calc((100% - 48px) / 3);
+
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .overflow {
@@ -425,35 +428,23 @@ ul {
     overflow: hidden;
 }
 
-.overlay-text {
-    font-weight: 400;
-        font-size: 16px;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
-        color: #f4f4fd;
-}
-
 .overlay {
-    padding: 40px 32px 164px 32px;
+    padding: 40px 32px;
     background-color: #4d5ae5;
     position: absolute;
     top: 0;
-    left: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #f4f4fd;
     width: 100%;
     height: 100%;
     transform: translateY(100%);
-    transition: transform 250ms ease-in-out;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-point:hover .overlay {
     transform: translateY(0);
-}
-
-.portfolio-point:hover {
-    box-shadow: 
-    0 2px 1px 0 rgba(46, 47, 66, 0.08), 
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 
-    0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .app-name {
@@ -522,14 +513,13 @@ ul {
 
 .footer-div {
     display: flex;
-    flex-direction: row;
     align-items: baseline;
+    margin: 0px 692px 0px 156px;
 }
 
-.footer-container {
-    max-width: 264px;
-    margin: 0px 120px 0px 156px;
-    padding: 0;
+.footer-container { 
+    padding: 0; 
+    margin-right: 120px;
 }
 
 .social-media-text {
@@ -537,25 +527,37 @@ ul {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: #fff;
+    color: #FFFFFF;
     margin-bottom: 16px;
 }
 
 .footer-social-list {
+    display: flex;
     gap: 16px;
 }
 
-.footer-social-media {
+.social-icon-list {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-link {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.media-footer {
-    max-height: 80px;
-}
-
-.social-icon-list:hover {
+.footer-link:hover, 
+.footer-link:focus {
     background-color: #31d0aa;
+}
+
+.footer-social-icon {
+    fill: #f4f4fd;
 }
