--- a/css/style.css
+++ b/css/style.css
@@ -367,6 +367,8 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover, 
@@ -518,7 +520,6 @@ ul {
 }
 
 .footer-container { 
-    padding: 0; 
     margin-right: 120px;
 }
 
