--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,14 @@ ul, ol, li {
     padding: 0;
 }
 
+input {
+    outline: none;
+}
+
+textarea {
+    resize: none;
+}
+
 /* Header */
 
 .had-container {
@@ -219,9 +227,7 @@ ul {
 .order-button:hover, 
 .order-button:focus {
     background-color: #404BBF;
-    cursor: pointer;
-
-    
+    cursor: pointer;  
 }
 
 /* Features */
@@ -531,6 +537,10 @@ ul {
     margin-right: 120px;
 }
 
+.media-footer {
+    margin-right: 80px;
+}
+
 .social-media-text {
     font-weight: 500;
     font-size: 16px;
@@ -569,4 +579,290 @@ ul {
 
 .footer-social-icon {
     fill: #f4f4fd;
+}
+
+.subscribe-list {
+    gap: 24px;
+}
+
+.email-footer {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+    background-color: rgba(0, 0, 0, 0);
+    padding-left: 16px;
+
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);    
+
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+}
+
+::placeholder {
+    color: #fff;
+}
+
+.social-media-text-button {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+}
+
+.subscribe-svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    gap: 16px;
+
+    border-radius: 4px;
+    padding: 8px 24px;
+    width: 165px;
+    height: 40px;
+
+    background-color: #4d5ae5;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-svg:hover,
+.subscribe-svg:focus {
+    background-color: #404BBF;
+    cursor: pointer;
+}
+
+.send {
+    fill: #fff;
+}
+
+.modal-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+    
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    transform: translate(-50%, -50%);
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay.is-open {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.modal {
+    background-color: #fcfcfc;
+}
+
+.close-icon {
+    fill: #2e2f42;
+}
+
+.div-close-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.close-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 24px 24px 24px 0;
+    
+
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.close-button:hover,
+.close-button:focus {
+    border: none;
+    background-color: #404bbf;
+}
+
+.close-button:hover svg,
+.close-button:focus svg {
+    fill: #fff;
+}
+
+.form-modal {
+    display: flex;
+    flex-direction: column;
+    padding: 0 24px;
+    margin-bottom: 16px;
+}
+
+.form-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+
+    margin-bottom: 16px;
+}
+
+.label-form {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+}
+
+.svg-form {
+    fill: #2e2f42;
+}
+
+.input-form {
+    padding-left: 38px;
+}
+
+.input-form:focus {
+    border: 1px solid #4d5ae5;
+}
+
+.input-form:focus + svg {
+    fill: #4d5ae5;
+}
+
+.form-modal input {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 360px;
+    height: 40px;
+}
+.form-modal svg {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+.input-wrap {
+    position: relative;
+    margin-bottom: 8px;
+}
+
+.textarea-form {
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 360px;
+    height: 120px;
+    padding-left: 16px;
+    padding-top: 8px;
+}
+
+.textarea-form:focus {
+    outline: none;
+    border: 1px solid #4d5ae5;
+}
+
+.privacy-policy {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row;
+    gap: 8px;
+    padding: 0 24px;
+
+    margin-bottom: 24px;
+}
+
+.privacy-policy-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.privacy-policy-span a{
+    line-height: 1.33333;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.send-button {
+    border-radius: 4px;
+    padding: 16px 32px;
+    width: 169px;
+    height: 56px;
+
+
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send-button:hover, 
+.send-button:focus {
+    background-color: #404BBF;
+    cursor: pointer;
+}
+
+.button-area {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 10px;
+
+    margin-bottom: 24px;
+}
+
+.checkmark {
+    fill: #fff;
+}
+
+.span-check {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+
+}
+
+input:checked + label > span {
+    display: block;
 }
