--- a/css/style.css
+++ b/css/style.css
@@ -606,7 +606,7 @@ ul {
     color: #fff;
 }
 
-.social-media-text-button {
+.footer-subscribe button {
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
