--- a/css/style.css
+++ b/css/style.css
@@ -581,53 +581,47 @@ ul {
     fill: #f4f4fd;
 }
 
-.subscribe-list {
+.subscribe-form {
+    display: flex;
     gap: 24px;
 }
 
 .email-footer {
-    font-weight: 400;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);    
+
+    border: 1px solid #ffffff;
+    width: 264px;
+    height: 40px;
+    background-color: transparent;
     font-size: 12px;
     line-height: 2;
     letter-spacing: 0.04em;
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0);
     padding-left: 16px;
-
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);    
-
-    border: 1px solid #fff;
     border-radius: 4px;
-    width: 264px;
-    height: 40px;
+    color: #ffffff;
 }
 
 ::placeholder {
-    color: #fff;
-}
-
-.footer-subscribe button {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    text-align: center;
-    color: #fff;
+    color: #ffffff;
 }
 
 .subscribe-svg {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 16px;
-
-    border-radius: 4px;
-    padding: 8px 24px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto",sans-serif ;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+
+    cursor: pointer;
     background-color: #4d5ae5;
+    border: none;
+    border-radius: 4px;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -639,29 +633,38 @@ ul {
 }
 
 .send {
+    margin-left: 16px;
     fill: #fff;
 }
 
+/* Modal */
+
 .modal-overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
+
+    background-color: rgba(46, 47, 66, 0.4);
+
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .modal-overlay {
+    background-color: rgba(0, 0, 0, 0.5);
+
     z-index: 999;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 
-    transform: translate(-50%, -50%);
-
     opacity: 0;
     pointer-events: none;
     transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .modal-overlay.is-open {
     opacity: 1;
@@ -669,33 +672,42 @@ ul {
 }
 
 .modal {
-    background-color: #fcfcfc;
-}
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
 
-.close-icon {
-    fill: #2e2f42;
-}
+    padding: 72px 24px 24px 24px;
 
-.div-close-button {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+    background: #fcfcfc;
+    border-radius: 4px;
+
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 24px 24px 24px 0;
-    
-
+    position: absolute;
+    top: 24px;
+    right: 24px;
     width: 24px;
     height: 24px;
     border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
 
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 0;
+
+    cursor: pointer;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button:hover,
@@ -704,16 +716,13 @@ ul {
     background-color: #404bbf;
 }
 
+.close-icon {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .close-button:hover svg,
 .close-button:focus svg {
     fill: #fff;
-}
-
-.form-modal {
-    display: flex;
-    flex-direction: column;
-    padding: 0 24px;
-    margin-bottom: 16px;
 }
 
 .form-text {
@@ -727,31 +736,144 @@ ul {
     margin-bottom: 16px;
 }
 
-.label-form {
-    font-weight: 400;
+.form-modal {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container {
+    margin-bottom: 8px;
+}
+
+.label-form {    
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
+    display: block;
     margin-bottom: 4px;
 }
 
-.svg-form {
-    fill: #2e2f42;
+.input-wrap {
+    position: relative;
 }
 
 .input-form {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
     padding-left: 38px;
+    outline: transparent;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .input-form:focus {
     border: 1px solid #4d5ae5;
 }
 
+.svg-form {
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .input-form:focus + svg {
     fill: #4d5ae5;
 }
 
+.comment-container {
+    margin-bottom: 16px;
+}
+
+.textarea-form {
+    width: 100%;
+    height: 120px;
+    font-size: 12px;
+    line-height: 12px;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+
+    background-color: transparent;
+
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.textarea-form:focus {
+    border-color: 1px solid #4d5ae5;
+}
+
+.privacy-policy {
+    margin-bottom: 24px;
+}
+
+.label-privacy {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;   
+}
+
+.span-label {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:checked + label > span {
+    background-color: #404bbf;
+    border: none;
+    fill: #f4f4fd;
+}
+
+.privacy-link {
+    color: #4d5ae5;
+}
+
+.send-button {
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+
+    border-radius: 4px;
+
+    cursor: pointer;
+    background-color: #4d5ae5;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.send-button:hover,
+.send-button:focus {
+    background-color: #404BBF;
+    cursor: pointer;
+}
+
+/*  
 .form-modal input {
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
@@ -764,36 +886,6 @@ ul {
     left: 12px;
     transform: translateY(-50%);
     cursor: pointer;
-}
-
-.input-wrap {
-    position: relative;
-    margin-bottom: 8px;
-}
-
-.textarea-form {
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    width: 360px;
-    height: 120px;
-    padding-left: 16px;
-    padding-top: 8px;
-}
-
-.textarea-form:focus {
-    outline: none;
-    border: 1px solid #4d5ae5;
-}
-
-.privacy-policy {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: row;
-    gap: 8px;
-    padding: 0 24px;
-
-    margin-bottom: 24px;
 }
 
 .privacy-policy-text {
@@ -829,12 +921,6 @@ ul {
     color: #fff;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.send-button:hover, 
-.send-button:focus {
-    background-color: #404BBF;
-    cursor: pointer;
 }
 
 .button-area {
