--- a/css/style.css
+++ b/css/style.css
@@ -814,6 +814,7 @@ ul {
 .span-label {
     width: 16px;
     height: 16px;
+    margin-right: 8px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 2px;
 
