--- a/css/style.css
+++ b/css/style.css
@@ -783,6 +783,7 @@ ul {
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 0.04em;
+    line-height: 1.17;
     color: rgba(46, 47, 66, 0.4);
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
@@ -797,7 +798,7 @@ ul {
 }
 
 .textarea-form:focus {
-    border-color: 1px solid #4d5ae5;
+    border-color: #4D5AE5;
 }
 
 .privacy-policy {
