--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,7 @@ ul {
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
+    margin: 0 auto;
 }
 
 .container-solutions {
@@ -651,9 +652,12 @@ ul {
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    opacity: 0;
+    pointer-events: none;
 }
 
-.modal-overlay .is-open {
+.modal-overlay.is-open {
     opacity: 1;
     pointer-events: auto;
 }
